feat: add content_script to inject
- inject script when notion page is in darkmode

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,8 +17,8 @@
       "matches": [
         "https://www.notion.so/*"
       ],
-      "css": ["inserted.css"],
-      "run_at": "document_start",
+      "js": ["content_script.bundle.js"],
+      "run_at": "document_end",
       "all_frames": true
     }
   ],
